<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@id/igahmad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-black"
        android:onClick="alqrn"
        android:text="@string/quran"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-black"
        android:onClick="Taurt"
        android:text="@string/taurat"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/button3"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-black"
        android:onClick="Injl"
        android:text="@string/injil"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="sans-serif-black"
        android:onClick="Zabr"
        android:text="@string/zabur"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/creator"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>